Role: Emphasis font-size uses fixed size to prevent distortion.

--- a/source/_static/role.css
+++ b/source/_static/role.css
@@ -1,5 +1,5 @@
 em.alt {
-    font-size: 90%;
+    font-size: 13px;
     color: lightslategray;
 }
 
@@ -9,7 +9,9 @@ em.target {
 }
 
 em.lower {
-    font-size: 90%;
+    font-size: 13px;
+    font-weight: bold;
+    font-style: normal;
 }
 
 abbr.sub {
